# flick

./: .gitmodules  README.md
app/: CMakeLists.txt
app/platform/STM32H7/Drivers/CMSIS/docs/Driver/html/: group__usb__interface__gr.js:Zone.Identifier
app/src/: main.c
